Behold, the entire mod, again!